[package]
name = "ce-score-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-turso = "0.45.0"
libsql = { version = "0.3.1", features = ["core"] }
tokio = "1.26.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tracing = "0.1.40"
anyhow = "1.0.86"
